description = 'Lib OGC'

allprojects  {
  repositories {
    mavenCentral()
  }
}

subprojects {
  apply plugin: 'java'
  apply plugin: 'osgi'
  apply plugin: 'maven-publish' 
 
  sourceCompatibility = 1.11
  targetCompatibility = 1.11
  ext.details = null
  ext.pom = {} // pom data that subprojects can append to
  
  tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << "-Xlint:-options"
  }
  
  tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
  }

  // default test dependencies
  dependencies {
    testCompile 'junit:junit:4.11'
    testCompile 'xmlunit:xmlunit:1.6'
  }
}
